--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,24 @@
-# Import cache
+# Godot 4+
+.godot/
+
+# Specifics
+export.cfg
+export_presets.cfg
+
+# Imports
 .import/
+*.translation
 
 # Binaries
 bin/
 build/
 lib/
+
+# Mono
+.mono/
+data_*/
+mono_crash.*.json
+
+# System/Tools
+.directory
+*~
